// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup component should render correctly when label is not a string with Children = Array 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  isInline={false}
  isRequired={false}
  isValid={true}
  label={
    <div>
      label
    </div>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
    >
      <div>
        label
      </div>
    </label>
    <input
      aria-label="label"
    />
    <input
      id="id"
    />
    <input />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render default form group variant 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__helper-text {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  helperText="this is helper text"
  isInline={false}
  isRequired={false}
  isValid={true}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      label
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      this is helper text
    </div>
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group invalid variant 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__helper-text.pf-m-error {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  helperTextInvalid="Invalid FormGroup"
  isInline={false}
  isRequired={false}
  isValid={false}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      label
    </label>
    <input
      id="id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text pf-m-error"
      id="label-id-helper"
    >
      Invalid FormGroup
    </div>
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group required variant 1`] = `
.pf-c-form__label__required {
  display: block;
}
.pf-c-form__label {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="id"
  isInline={false}
  isRequired={true}
  isValid={true}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="id"
    >
      label
      <span
        aria-hidden="true"
        className="pf-c-form__label__required"
      >
        *
      </span>
    </label>
    <input
      id="id"
    />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant with function helperText 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__helper-text {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  helperText={
    <div>
      label
    </div>
  }
  isInline={false}
  isRequired={false}
  isValid={true}
  label="Label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      Label
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      <div>
        label
      </div>
    </div>
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant with function label 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  isInline={false}
  isRequired={false}
  isValid={true}
  label={
    <div>
      label
    </div>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
    >
      <div>
        label
      </div>
    </label>
    <input
      aria-label="input"
    />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant with node helperText 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__helper-text {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  helperText={
    <h1>
      Header
    </h1>
  }
  isInline={false}
  isRequired={false}
  isValid={true}
  label="Label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      Label
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      <h1>
        Header
      </h1>
    </div>
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant with node label 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  isInline={false}
  isRequired={false}
  isValid={true}
  label={
    <h1>
      Header
    </h1>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
    >
      <h1>
        Header
      </h1>
    </label>
    <input
      aria-label="input"
    />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant with required label 1`] = `
.pf-c-form__label__required {
  display: block;
}
.pf-c-form__label {
  display: block;
}
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  isInline={false}
  isRequired={true}
  isValid={true}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      label
      <span
        aria-hidden="true"
        className="pf-c-form__label__required"
      >
        *
      </span>
    </label>
    <input
      id="label-id"
    />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render form group variant without label 1`] = `
.pf-c-form__group {
  display: block;
}

<FormGroup
  className=""
  isInline={false}
  isRequired={false}
  isValid={true}
>
  <div
    className="pf-c-form__group"
  >
    <input
      aria-label="input"
    />
  </div>
</FormGroup>
`;

exports[`FormGroup component should render horizontal form group variant 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__horizontal-group {
  display: block;
}
.pf-c-form__helper-text {
  display: block;
}
.pf-c-form__group {
  display: block;
}
.pf-c-form.pf-m-horizontal {
  display: grid;
  grid-gap: 1.5rem;
}

<Form
  className=""
  isHorizontal={true}
>
  <form
    className="pf-c-form pf-m-horizontal"
  >
    <FormGroup
      className=""
      fieldId="label-id"
      helperText="this is helperText"
      isInline={false}
      isRequired={false}
      isValid={true}
      label="label"
    >
      <div
        className="pf-c-form__group"
      >
        <label
          className="pf-c-form__label"
          htmlFor="label-id"
        >
          label
        </label>
        <div
          className="pf-c-form__horizontal-group"
        >
          <input
            id="label-id"
          />
        </div>
        <div
          aria-live="polite"
          className="pf-c-form__helper-text"
          id="label-id-helper"
        >
          this is helperText
        </div>
      </div>
    </FormGroup>
  </form>
</Form>
`;

exports[`FormGroup component should render inline form group variant 1`] = `
.pf-c-form__label {
  display: block;
}
.pf-c-form__helper-text {
  display: block;
}
.pf-c-form__group.pf-m-inline {
  display: block;
}

<FormGroup
  className=""
  fieldId="label-id"
  helperText="this is helper text"
  isInline={true}
  isRequired={false}
  isValid={true}
  label="label"
>
  <div
    className="pf-c-form__group pf-m-inline"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      label
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      this is helper text
    </div>
  </div>
</FormGroup>
`;
